Plugin Commands place and reload. Places an encounter at a location, and Reloads the configuration files. Addresses issue #2

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,10 @@
 name: RandomEncounters
 author: ArchmageInc
 main: com.archmageinc.RandomEncounters.RandomEncounters
-version: 0.2
+version: 0.3
 description: Generates configurable random encounters in newly generated chunks
 depend: [WorldEdit]
+commands:
+    re:
+        description: Random Encounters manipulation
+        usage: /re [place, reload]
