Added check command to force a location check before placing an encounter. #2

--- a/plugin.yml
+++ b/plugin.yml
@@ -7,4 +7,4 @@ depend: [WorldEdit]
 commands:
     re:
         description: Random Encounters manipulation
-        usage: /re [place, reload]
+        usage: /re [place, check, reload]
