Creates tasks for spawn location detection and encounter spawning. Addresses issue #4. This adds the configuration directive for maxLockTime.

--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,7 @@ structureConfig: "structures.json"
 mobConfig: "mobs.json"
 encounterConfig: "encounters.json"
 savedEncounters: "savedEncounters.json"
+maxLockTime: 10
 debug:
     loglevel: 0
     midas: false
