Added Treasure configuration with Treasure groups. Closes #8

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
 structureConfig: "structures.json"
+treasureConfig: "treasures.json"
 mobConfig: "mobs.json"
 encounterConfig: "encounters.json"
 savedEncounters: "savedEncounters.json"
