--- a/treasures.json
+++ b/treasures.json
@@ -52,6 +52,9 @@
             "min":              1,
             "max":              1,
             "probability":      1,
+            "lore":             [
+              "Geordian Crown"  
+            ],
             "enchantments": [
                 {
                         "enchantment":	"THORNS",
